<resources>
    <string name="app_name">MultipleActivityApp</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="back_button_text">Back</string>
    <string name="users_button_text">List Users</string>
    <string name="exit_button_text">Exit</string>
    <string name="username_edittext_hint_text">Enter username</string>
    <string name="name_edittext_hint_text">Enter name</string>
    <string name="email_edittext_hint_text">Enter email</string>
    <string name="password_edittext_hint_text">Enter password</string>
    <string name="confirm_password_edittext_hint_text">Confirm  password</string>
    <string name="accept_conditions_switch_text">Accept</string>
    <string name="show_password_switch_text">Show Password</string>
    <string name="goodbye_message_text">C and System Programmers Association</string>
    <string name="return_back_message">Press again to return back!…</string>
    <string name="textview_education_label">Education Information</string>
    <string name="education_radio_button_phd">PhD</string>
    <string name="education_radio_button_msc">MsC</string>
    <string name="education_radio_button_graduate">Graduate</string>
    <string name="education_radio_button_under_graduate">Under Graduate</string>
    <string name="textview_marital_status_label">Marital Status</string>
    <string name="textview_bith_date_label">Birth Date</string>
    <string name="marital_status_radio_button_single">Single</string>
    <string name="marital_status_radio_button_married">Married</string>
    <string name="marital_status_radio_button_divorced">Divorced</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="users_activity_title">All Users</string>
    <string name="alert_details_message">Do you want to see the details?</string>
    <string name="alert_details_yes">Yes</string>
    <string name="alert_details_no">No</string>
    <string name="alert_details_cancel">Cancel</string>
    <string name="textview_name_label">Name</string>
    <string name="textview_email_label">Email</string>
    <string name="textview_username_label">Username</string>
    <string name="ok_button_text">OK</string>
    <string name="invalid_date_toast_message_text">Invalid Date</string>
</resources>