<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserDetailsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_name_label" />

    <TextView
        android:id="@+id/userDetailsActivityTextViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_email_label" />

    <TextView
        android:id="@+id/userDetailsActivityTextViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_username_label" />

    <TextView
        android:id="@+id/userDetailsActivityTextViewUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_education_label" />

    <TextView
        android:id="@+id/userDetailsActivityTextViewEducation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_marital_status_label" />

    <TextView
        android:id="@+id/userDetailsActivityTextViewMaritalStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/userDetailsActivityButtonOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok_button_text" />
</LinearLayout>