<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterDetailsActivity">

    <EditText
        android:id="@+id/registerDetailsActivityEditTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name_edittext_hint_text" />

    <EditText
        android:id="@+id/registerDetailsActivityEditTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_edittext_hint_text" />

    <EditText
        android:id="@+id/registerDetailsActivityEditTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username_edittext_hint_text" />

    <Button
        android:id="@+id/registerDetailsActivityButtonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button_text" />

    <Button
        android:id="@+id/registerDetailsActivityButtonBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_button_text" />
</LinearLayout>