<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="org.csystem.android.app.multipleactivity.data.LoginInfo"/>
        <import type="org.csystem.android.app.multipleactivity.data.viewmodel.LoginViewModel"/>
        <variable name="loginInfo" type="LoginInfo" />
        <variable name="loginViewModel" type="LoginViewModel" />
    </data>

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/username_edittext_hint_text"
            android:text="@={loginInfo.username}"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_edittext_hint_text"
            android:text="@={loginInfo.password}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> loginViewModel.handleLoginButtonClicked()}"
            android:text="@string/login_button_text" />
    </LinearLayout>
</layout>

